# setekh

./: .gitignore  CMakeLists.txt  README.md  make.sh
.github/workflows/: build.yml  release.yml
cmake/: cpm.cmake
docs/: README-linux.txt
docs/ui/: manual.afdesign  setekh-ui.afdesign  setekh-ui.afdesign~lock~
plugin/: CMakeLists.txt
plugin/include/Setekh/: PluginEditor.h  PluginProcessor.h
plugin/include/Setekh/ui/: CustomToggleLNF.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/source/ui/: CustomKnobLNF.cpp  CustomSliderLNF.cpp  CustomSplashScreen.cpp  CustomToggleLNF.cpp
scripts/: generate_filmstrip.sh  generate_gain_filmstrip.sh
src/: CustomKnobLNF.cpp  CustomKnobLNF.h  CustomSliderLNF.cpp  CustomSliderLNF.h  CustomSplashScreen.cpp  CustomSplashScreen.h  CustomToggleLNF.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
